Loading programs at runtime
Included an example program fibonacci.bin

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/cpuemu",
-            "args": [],
+            "args": ["fibonacci.bin"],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/bin",
+            "cwd": "${workspaceFolder}",
             "environment": [
                 {"name": "LD_LIBRARY_PATH", "value": "/usr/local/lib"}
             ],
